--- a/UwUber/View/Base.lproj/Main.storyboard
+++ b/UwUber/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BO7-ln-bMb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="P0s-Ep-iyT">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -11,13 +11,13 @@
         <!--Login Screen Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginScreenController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginScreenController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginScreenController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="1QA-nZ-79O">
-                                <rect key="frame" x="64" y="294" width="300" height="236.33333333333337"/>
+                                <rect key="frame" x="64" y="338" width="300" height="236.33333333333337"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UwUberLogo" translatesAutoresizingMaskIntoConstraints="NO" id="WfC-XD-35s">
                                         <rect key="frame" x="70" y="0.0" width="160" height="58"/>
@@ -87,7 +87,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATo-a9-4cB">
-                                <rect key="frame" x="166" y="780.33333333333337" width="96" height="40"/>
+                                <rect key="frame" x="166" y="824.33333333333337" width="96" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="khT-Hl-fG6"/>
                                 </constraints>
@@ -115,6 +115,7 @@
                         <outlet property="LoginButton" destination="vhZ-Q1-n68" id="RRD-hE-3XO"/>
                         <outlet property="emailTextField" destination="vr3-49-bCK" id="EMW-ak-Kh7"/>
                         <outlet property="passwordTextField" destination="7dP-Bp-Sx8" id="ikD-1d-yiN"/>
+                        <segue destination="P0s-Ep-iyT" kind="show" id="mLv-uE-JTt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -126,11 +127,11 @@
             <objects>
                 <viewController id="q4l-Id-KtR" customClass="SignUpController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="G2A-h2-3cd" customClass="I">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="bQc-cG-B2R">
-                                <rect key="frame" x="94" y="264" width="240" height="343.33333333333326"/>
+                                <rect key="frame" x="94" y="308" width="240" height="343.33333333333326"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UwUberLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZMq-dM-btd">
                                         <rect key="frame" x="40" y="0.0" width="160" height="58"/>
@@ -182,7 +183,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nVT-CE-92Z">
-                                <rect key="frame" x="177.33333333333334" y="837.33333333333337" width="73.666666666666657" height="37.333333333333371"/>
+                                <rect key="frame" x="177.33333333333334" y="881.33333333333337" width="73.666666666666657" height="37.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Login">
                                     <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
@@ -214,9 +215,9 @@
         <!--Map Controller-->
         <scene sceneID="Mk9-6d-aES">
             <objects>
-                <viewController id="P0s-Ep-iyT" customClass="MapController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MapController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="P0s-Ep-iyT" customClass="MapController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="V4y-GU-1cV" customClass="I">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="ZmM-ge-ed2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -225,7 +226,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M7Z-FT-l1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="-338"/>
+            <point key="canvasLocation" x="907" y="-338"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6bu-YC-X8X">
@@ -247,7 +248,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="a3X-8c-VUu"/>
+        <segue reference="mLv-uE-JTt"/>
+        <segue reference="EbG-Gp-DFC"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="UwUberLogo" width="160" height="58"/>
