Map intergrated without locations

--- a/UwUber/View/Base.lproj/Main.storyboard
+++ b/UwUber/View/Base.lproj/Main.storyboard
@@ -13,11 +13,11 @@
             <objects>
                 <viewController storyboardIdentifier="LoginScreenController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginScreenController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="1QA-nZ-79O">
-                                <rect key="frame" x="64" y="338" width="300" height="236.33333333333337"/>
+                                <rect key="frame" x="64" y="294" width="300" height="236.33333333333337"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UwUberLogo" translatesAutoresizingMaskIntoConstraints="NO" id="WfC-XD-35s">
                                         <rect key="frame" x="70" y="0.0" width="160" height="58"/>
@@ -87,7 +87,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATo-a9-4cB">
-                                <rect key="frame" x="166" y="824.33333333333337" width="96" height="40"/>
+                                <rect key="frame" x="166" y="780.33333333333337" width="96" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="khT-Hl-fG6"/>
                                 </constraints>
@@ -127,11 +127,11 @@
             <objects>
                 <viewController id="q4l-Id-KtR" customClass="SignUpController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="G2A-h2-3cd" customClass="I">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="bQc-cG-B2R">
-                                <rect key="frame" x="94" y="308" width="240" height="343.33333333333326"/>
+                                <rect key="frame" x="94" y="264" width="240" height="343.33333333333326"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UwUberLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZMq-dM-btd">
                                         <rect key="frame" x="40" y="0.0" width="160" height="58"/>
@@ -183,7 +183,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nVT-CE-92Z">
-                                <rect key="frame" x="177.33333333333334" y="881.33333333333337" width="73.666666666666657" height="37.333333333333371"/>
+                                <rect key="frame" x="177.33333333333334" y="837.33333333333337" width="73.666666666666657" height="37.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Login">
                                     <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
@@ -217,16 +217,27 @@
             <objects>
                 <viewController storyboardIdentifier="MapController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="P0s-Ep-iyT" customClass="MapController" customModule="UwUber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="V4y-GU-1cV" customClass="I">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="LjP-Iq-Fnq">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="838"/>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ZmM-ge-ed2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZmM-ge-ed2" firstAttribute="trailing" secondItem="LjP-Iq-Fnq" secondAttribute="trailing" id="3wL-tw-yNd"/>
+                            <constraint firstItem="LjP-Iq-Fnq" firstAttribute="centerX" secondItem="V4y-GU-1cV" secondAttribute="centerX" id="H74-eC-W03"/>
+                            <constraint firstItem="ZmM-ge-ed2" firstAttribute="bottom" secondItem="LjP-Iq-Fnq" secondAttribute="bottom" id="S3t-1H-ijC"/>
+                            <constraint firstItem="LjP-Iq-Fnq" firstAttribute="leading" secondItem="ZmM-ge-ed2" secondAttribute="leading" id="p1G-NV-S8j"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="m0k-s4-xYf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M7Z-FT-l1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="907" y="-338"/>
+            <point key="canvasLocation" x="905.60747663551399" y="-338.22894168466524"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6bu-YC-X8X">
@@ -249,7 +260,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="mLv-uE-JTt"/>
-        <segue reference="EbG-Gp-DFC"/>
+        <segue reference="a3X-8c-VUu"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="UwUberLogo" width="160" height="58"/>
